--- a/AdventOfCode.fsproj
+++ b/AdventOfCode.fsproj
@@ -9,6 +9,7 @@
         <None Include="Helper.fsx" />
         <None Include="Day1.fsx" />
         <None Include="Day2.fsx" />
+        <None Include="Day3.fsx" />
     </ItemGroup>
 
 </Project>
