--- a/AdventOfCode.fsproj
+++ b/AdventOfCode.fsproj
@@ -11,6 +11,7 @@
         <None Include="Day2.fsx" />
         <None Include="Day3.fsx" />
         <None Include="Day4.fsx" />
+        <None Include="Day5.fsx" />
     </ItemGroup>
 
 </Project>
