--- a/AdventOfCode.fsproj
+++ b/AdventOfCode.fsproj
@@ -12,6 +12,7 @@
         <None Include="Day3.fsx" />
         <None Include="Day4.fsx" />
         <None Include="Day5.fsx" />
+        <None Include="Day6.fsx" />
     </ItemGroup>
 
 </Project>
