--- a/AdventOfCode.fsproj
+++ b/AdventOfCode.fsproj
@@ -13,6 +13,7 @@
         <None Include="Day4.fsx" />
         <None Include="Day5.fsx" />
         <None Include="Day6.fsx" />
+        <None Include="Day7.fsx" />
     </ItemGroup>
 
 </Project>
