--- a/AdventOfCode.fsproj
+++ b/AdventOfCode.fsproj
@@ -18,6 +18,7 @@
         <None Include="Day09.fsx" />
         <None Include="Day10.fsx" />
         <None Include="Day11.fsx" />
+        <None Include="Day12.fsx" />
     </ItemGroup>
 
 </Project>
