--- a/AdventOfCode.fsproj
+++ b/AdventOfCode.fsproj
@@ -22,6 +22,7 @@
         <None Include="Day12Part1.fsx" />
         <None Include="Day12Part2.fsx" />
         <None Include="Day13.fsx" />
+        <None Include="Day14.fsx" />
     </ItemGroup>
 
 </Project>
