--- a/AdventOfCode.fsproj
+++ b/AdventOfCode.fsproj
@@ -23,6 +23,7 @@
         <None Include="Day12Part2.fsx" />
         <None Include="Day13.fsx" />
         <None Include="Day14.fsx" />
+        <None Include="Day15.fsx" />
     </ItemGroup>
 
 </Project>
